# cmake-example

cl_dnn/: .ninja_deps  .ninja_log  CMakeLists.txt
cl_dnn/include/: sum.h
cl_dnn/src/main/: .ninja_deps  .ninja_log  CMakeLists.txt
cl_dnn/src/sum/: CMakeLists.txt  sum.c
sum/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  rules.ninja
sum/include/: sum.h
sum/src/: CMakeLists.txt  cmake_install.cmake
sum/src/main/: CMakeLists.txt  cmake_install.cmake  main.c
sum/src/sum/: cmake_install.cmake  sum.c
